[gd_scene load_steps=3 format=3 uid="uid://blaoklvesr4v3"]

[ext_resource type="Script" path="res://Game list.gd" id="1_akeev"]
[ext_resource type="Texture2D" uid="uid://bb6rx712hg54k" path="res://48C logo@1x.png" id="2_ak455"]

[node name="Game list" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_akeev")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 4275.0
offset_bottom = 2823.0
color = Color(1, 0.603922, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -188.0
offset_right = 137.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Game"
horizontal_alignment = 1

[node name="game1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game1"

[node name="game2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game2"

[node name="game3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game3"

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(133, 277)
scale = Vector2(0.625983, 0.6693)
texture = ExtResource("2_ak455")

[connection signal="pressed" from="MarginContainer/VBoxContainer/game1" to="." method="_on_game_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/game2" to="." method="_on_game_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/game3" to="." method="_on_game_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
